prevent overly-long tables by setting a scroll overflow on the list of people / people who didn't post bond

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,6 @@
 @import "charts/population_capacity";
 
 .tidy {
-  height: 600px;
-  overflow: scroll;
+  height: 400px;
+  overflow-y: scroll;
 }
